@@ -123,6 +123,8 @@ IN DEVELOPMENT
       show_merge_revno methods. The latter had been deprecated since the 0.17
       release. (James Westby)
 
+    * ``osutils.backup_file`` is removed. (Alexander Belchenko)
+
     * ``Repository.get_revision_graph`` is deprecated, with no replacement
       method. The method was size(history) and not desirable. (Robert Collins)
 
